--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "slim/views": "^0.1.3",
         "slim/twig-view": "^2.4",
         "mongodb/mongodb": "1.0.0",
-        "cvweiss/guzzler": "0.0.9"
+        "cvweiss/guzzler": "0.0.9",
+        "zkillboard/eveonlineoauth2": "*"
     },
         "autoload": {
             "psr-4": {
