--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,7 @@ name: Deploy with Cache Busting
 on:
   push:
     branches: [main]
+  workflow_dispatch:  # 👈 Adds manual "Run workflow" button
 
 jobs:
   deploy:
