--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,8 @@ name: Deploy with Cache Busting
 
 on:
   push:
-    branches: [master]
-  workflow_dispatch:  # 👈 Adds manual "Run workflow" button
+    branches: [main]
+  workflow_dispatch:
 
 jobs:
   deploy:
@@ -21,7 +21,7 @@ jobs:
         sed -i -E "s|(src=\"/js/.*\.js)(\")|\1?v=${HASH}\2|g" index.html
         sed -i -E "s|(href=\"/css/.*\.css)(\")|\1?v=${HASH}\2|g" index.html
         sed -i -E "s|githubhash=\"\"|githubhash=\"${HASH}\"|g" index.html
-        sed -i -E "s|githubhash=\"\"|githubhash=\"${HASH}\"|g" js/app.js
+        sed -i -E "s|githubhash = \"\"|githubhash = \"${HASH}\"|g" js/app.js
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
