--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,7 @@ jobs:
         sed -i -E "s|(href=\"/css/.*\.css)(\")|\1?v=${HASH}\2|g" index.html
         sed -i -E "s|githubhash=\"\"|githubhash=\"${HASH}\"|g" index.html
         sed -i -E "s|githubhash = \"\"|githubhash = \"${HASH}\"|g" js/app.js
+        echo "${HASH}" > podmail.version
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
