--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,12 +18,10 @@ jobs:
 
     - name: Inject cache-busting into HTML and JS
       run: |
-        sed -i -E "s|(src=\"/js/.*\.js)(\")|\1?v=${HASH}\2|g" index.html
-        sed -i -E "s|(href=\"/css/.*\.css)(\")|\1?v=${HASH}\2|g" index.html
-        sed -i -E "s|githubhash=\"\"|githubhash=\"${HASH}\"|g" index.html
         sed -i -E "s|githubhash = \"\"|githubhash = \"${HASH}\"|g" js/app.js
-        sed -i -E "s|('/js/.*\.js)(')|\1?v=${HASH}\2|g" js/sw.js
-        sed -i -E "s|(', \/\/ hash)|?v=${HASH}\1|g" js/sw.js
+        sed -i -E "s|--hash--|${HASH}|g" index.html
+        sed -i -E "s|--hash--|${HASH}|g" js/app.js
+        sed -i -E "s|--hash--|${HASH}|g" js/sw.js
         echo "${HASH}" > podmail.version
 
     - name: Deploy to GitHub Pages
