github action cleanup/improvement

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,18 +13,26 @@ jobs:
 
     steps:
     - name: Checkout source
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Generate cache-busting hash
       run: echo "HASH=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
 
-    - name: Inject cache-busting into HTML and JS
+    - name: Inject cache-busting hashes
       run: |
         sed -i -E "s|githubhash = \"\"|githubhash = \"${HASH}\"|g" js/app.js
         sed -i -E "s|--hash--|${HASH}|g" index.html
         sed -i -E "s|--hash--|${HASH}|g" js/app.js
-        sed -i -E "s|--hash--|${HASH}|g" js/sw.js
+        sed -i -E "s|--hash--|${HASH}|g" sw.js
         echo "${HASH}" > podmail.version
+    
+    - name: Verify hash replacement
+      run: |
+        if grep -r "--hash--" index.html js/ sw.js 2>/dev/null; then
+          echo "ERROR: Found unreplaced --hash-- placeholders"
+          exit 1
+        fi
+        echo "✓ All --hash-- placeholders replaced with ${HASH}"
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
@@ -32,3 +40,4 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: .
         publish_branch: gh-pages
+        exclude_assets: '.github,.gitignore,.gitattributes'
